{
  "version": 4,
  "terraform_version": "0.12.7",
  "serial": 167,
  "lineage": "2f56ab88-28c9-cc17-4c45-96330344f35e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:917463887348:loadbalancer/nginx-elb",
            "availability_zones": [
              "us-east-2a",
              "us-east-2b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "nginx-elb-7810693.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "nginx-elb",
            "idle_timeout": 60,
            "instances": [
              "i-01b2a2dd4142452ea",
              "i-03a2fbd4c1448cb22",
              "i-0455e200f58be5bbe",
              "i-0abbc5cddff9c2aeb"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "nginx-elb",
            "security_groups": [
              "sg-0f7b62ce57d8e966f"
            ],
            "source_security_group": "917463887348/nginx_elb_sg",
            "source_security_group_id": "sg-0f7b62ce57d8e966f",
            "subnets": [
              "subnet-08767a5d2d57b2ee7",
              "subnet-0e73a41087698eaf5"
            ],
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "depends_on": [
            "aws_instance.instances",
            "aws_security_group.elb-sg",
            "aws_subnet.subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instances",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02f706d959cedf892",
            "arn": "arn:aws:ec2:us-east-2:917463887348:instance/i-0455e200f58be5bbe",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0455e200f58be5bbe",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AwsTestDeployment",
            "monitoring": false,
            "primary_network_interface_id": "eni-057a59f951fefcad2",
            "private_dns": "ip-10-1-1-240.us-east-2.compute.internal",
            "private_ip": "10.1.1.240",
            "public_ip": "18.191.178.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04b3f633eefa70c28",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e73a41087698eaf5",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d2539769c299dfb3"
            ]
          },
          "depends_on": [
            "aws_iam_access_key.write_user",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02f706d959cedf892",
            "arn": "arn:aws:ec2:us-east-2:917463887348:instance/i-01b2a2dd4142452ea",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-01b2a2dd4142452ea",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AwsTestDeployment",
            "monitoring": false,
            "primary_network_interface_id": "eni-0192f2abd1b2ed435",
            "private_dns": "ip-10-1-2-56.us-east-2.compute.internal",
            "private_ip": "10.1.2.56",
            "public_ip": "3.15.230.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02908bf00c91aa60b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08767a5d2d57b2ee7",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d2539769c299dfb3"
            ]
          },
          "depends_on": [
            "aws_iam_access_key.write_user",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnets"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02f706d959cedf892",
            "arn": "arn:aws:ec2:us-east-2:917463887348:instance/i-03a2fbd4c1448cb22",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-03a2fbd4c1448cb22",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AwsTestDeployment",
            "monitoring": false,
            "primary_network_interface_id": "eni-0ee0be2e6abc97d23",
            "private_dns": "ip-10-1-1-253.us-east-2.compute.internal",
            "private_ip": "10.1.1.253",
            "public_ip": "3.15.219.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03f14826d1cb4582e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e73a41087698eaf5",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d2539769c299dfb3"
            ]
          },
          "depends_on": [
            "aws_iam_access_key.write_user",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnets"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02f706d959cedf892",
            "arn": "arn:aws:ec2:us-east-2:917463887348:instance/i-0abbc5cddff9c2aeb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0abbc5cddff9c2aeb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AwsTestDeployment",
            "monitoring": false,
            "primary_network_interface_id": "eni-0de8195d81d7a28cd",
            "private_dns": "ip-10-1-2-115.us-east-2.compute.internal",
            "private_ip": "10.1.2.115",
            "public_ip": "3.16.38.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-084b8d8d38b717a54",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08767a5d2d57b2ee7",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d2539769c299dfb3"
            ]
          },
          "depends_on": [
            "aws_iam_access_key.write_user",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0b58027601f6d627c",
            "owner_id": "917463887348",
            "vpc_id": "vpc-050e5bfe28b8c331b"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fc9e1fa15c5a7619",
            "owner_id": "917463887348",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b58027601f6d627c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-050e5bfe28b8c331b"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet1",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d335d3d706eeaf66",
            "route_table_id": "rtb-0fc9e1fa15c5a7619",
            "subnet_id": "subnet-0e73a41087698eaf5"
          },
          "depends_on": [
            "aws_route_table.rtb",
            "aws_subnet.subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050560bdceb40a2e9",
            "route_table_id": "rtb-0fc9e1fa15c5a7619",
            "subnet_id": "subnet-08767a5d2d57b2ee7"
          },
          "depends_on": [
            "aws_route_table.rtb",
            "aws_subnet.subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:917463887348:security-group/sg-0f7b62ce57d8e966f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f7b62ce57d8e966f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_elb_sg",
            "name_prefix": null,
            "owner_id": "917463887348",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-050e5bfe28b8c331b"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:917463887348:security-group/sg-0d2539769c299dfb3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d2539769c299dfb3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": null,
            "owner_id": "917463887348",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-050e5bfe28b8c331b"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:917463887348:subnet/subnet-0e73a41087698eaf5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0e73a41087698eaf5",
            "map_public_ip_on_launch": true,
            "owner_id": "917463887348",
            "vpc_id": "vpc-050e5bfe28b8c331b"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:917463887348:subnet/subnet-08767a5d2d57b2ee7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-08767a5d2d57b2ee7",
            "map_public_ip_on_launch": true,
            "owner_id": "917463887348",
            "vpc_id": "vpc-050e5bfe28b8c331b"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:917463887348:vpc/vpc-050e5bfe28b8c331b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0aad86dd25e38da78",
            "default_route_table_id": "rtb-018dee78c605163a7",
            "default_security_group_id": "sg-040b0903bc8241750",
            "dhcp_options_id": "dopt-d0f03cbb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-050e5bfe28b8c331b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-018dee78c605163a7",
            "owner_id": "917463887348"
          }
        }
      ]
    }
  ]
}